--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,24 @@
 <div class="container-fluid">
   <h1>Bootcamp enrollement form</h1>
-  <form>
+  <form #userForm="ngForm">
+    {{ userForm.value | json}}
+    <hr>
+    {{userModel | json}}
     <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" name="name" class="form-control" />
+      <label for="username">Name</label>
+      <input type="text" name="username" class="form-control" [(ngModel)]="userModel.name"/>
     </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" name="email" class="form-control" />
+      <input type="email" name="email" class="form-control" [(ngModel)]="userModel.email"/>
     </div>
     <div class="form-group">
       <label for="phone">Phone</label>
-      <input type="tel" name="phone" class="form-control" />
+      <input type="tel" name="phone" class="form-control" [(ngModel)]="userModel.phone"/>
     </div>
 
     <div class="form-group">
-      <select class="custom-select">
+      <select class="form-control" name="topic" [(ngModel)]="userModel.topic">
         <option selected>I am interested in</option>
         <option *ngFor="let topic of topics">{{ topic }}</option>
       </select>
@@ -23,17 +26,17 @@
     <div class="mb-3">
       <label>Time Prefrence</label>
       <div class="form-check">
-        <input type="radio" name="timePreference" value="morning" id="" />
+        <input type="radio" name="timePreference" value="morning" id="" ngModel/>
         <label class="form-check-label">Morning (9AM - 12PM)</label>
       </div>
       <div class="form-check">
-        <input type="radio" name="timePreference" value="evening" id="" />
+        <input type="radio" name="timePreference" value="evening" id="" [ngModel]="userModel.timePreference" />
         <label class="form-check-label">Evening (5PM - 8PM)</label>
       </div>
     </div>
 
     <div class="form-check mb-3">
-      <input type="checkbox" name="" id="" class="form-check-input">
+      <input type="checkbox" name="subscribe" id="" class="form-check-input" [(ngModel)]="userModel.subscribe">
       <label class="form-check-label">
         Send me promotional offers
       </label>
