--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,108 @@
 <div class="container-fluid">
   <h1>Bootcamp enrollement form</h1>
   <form #userForm="ngForm">
-  
     <div class="form-group">
       <label for="username">Name</label>
-      <input type="text" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched" name="username" class="form-control" [(ngModel)]="userModel.name"/>
-    </div>
-   
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" name="email" class="form-control" [(ngModel)]="userModel.email"/>
-    </div>
-    <div class="form-group">
-      <label for="phone">Phone</label>
-      <input type="tel" #phone="ngModel" pattern="^\d{10}&" [class.is-invalid]="phone.invalid && phone.touched"  name="phone" class="form-control" [(ngModel)]="userModel.phone"/>
+      <input
+        type="text"
+        required
+        #name="ngModel"
+        [class.is-invalid]="name.invalid && name.touched"
+        name="username"
+        class="form-control"
+        [(ngModel)]="userModel.name"
+      />
+      <small
+        class="text-danger"
+        [class.invisible]="name.valid || name.untouched"
+        >Name is required</small
+      >
     </div>
 
     <div class="form-group">
-      <select class="form-control" name="topic" [(ngModel)]="userModel.topic">
-        <option selected>I am interested in</option>
+      <label for="email">Email</label>
+      <input
+        type="email"
+        required
+        #email="ngModel"
+        [class.is-invalid]="email.invalid && email.touched"
+        name="email"
+        class="form-control"
+        [(ngModel)]="userModel.email"
+      />
+    </div>
+    <div class="form-group">
+      <label for="phone">Phone</label>
+      <input
+        type="tel"
+        required
+        #phone="ngModel"
+        pattern="^\d{10}$"
+        [class.is-invalid]="phone.invalid && phone.touched"
+        name="phone"
+        class="form-control"
+        [(ngModel)]="userModel.phone"
+      />
+      <small
+        class="text-danger"
+        [class.invisible]="phone.valid || phone.untouched"
+        >Phone number is required and must be 10 digits</small
+      >
+    </div>
+
+    <div class="form-group">
+      <select
+        (blur)="validateTopic(topic.value)"
+        (change)="validateTopic(topic.value)"
+        
+        #topic="ngModel"
+        [class.is-invalid]="topicHasError && topic.touched"
+        class="form-control"
+        name="topic"
+        [(ngModel)]="userModel.topic"
+      >
+        <option value="default">I am interested in</option>
         <option *ngFor="let topic of topics">{{ topic }}</option>
       </select>
+      <small
+        class="text-danger"
+        [class.invisible]="!topicHasError || topic.untouched"
+        >Please choose a topic</small
+      >
     </div>
     <div class="mb-3">
       <label>Time Prefrence</label>
       <div class="form-check">
-        <input type="radio" name="timePreference" value="morning" id="" ngModel/>
+        <input
+          type="radio"
+          name="timePreference"
+          value="morning"
+          id=""
+          ngModel
+        />
         <label class="form-check-label">Morning (9AM - 12PM)</label>
       </div>
       <div class="form-check">
-        <input type="radio" name="timePreference" value="evening" id="" [ngModel]="userModel.timePreference" />
+        <input
+          type="radio"
+          name="timePreference"
+          value="evening"
+          id=""
+          [ngModel]="userModel.timePreference"
+        />
         <label class="form-check-label">Evening (5PM - 8PM)</label>
       </div>
     </div>
 
     <div class="form-check mb-3">
-      <input type="checkbox" name="subscribe" id="" class="form-check-input" [(ngModel)]="userModel.subscribe">
-      <label class="form-check-label">
-        Send me promotional offers
-      </label>
+      <input
+        type="checkbox"
+        name="subscribe"
+        id=""
+        class="form-check-input"
+        [(ngModel)]="userModel.subscribe"
+      />
+      <label class="form-check-label"> Send me promotional offers </label>
     </div>
 
     <button class="btn btn-primary" type="submit">Submit Form</button>
